Mon Dec 24 08:08:40 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Atomic_Op.i: Make sure to initialize the mutex_ reference in the 
	  ACE_Atomic_Op_Ex copy constructor. 	

	* ace/OS.cpp (pwrite): The lseek() call must use SEEK_CUR rather
	  than SEEK_SET.  Thanks to Duane Binder
 	  <duane.binder@veritas.com> for reporting this.  This fixes bugid
 	  1095.

	* ace/Proactor.i (run_event_loop): Refactored the code to
	  use the new ACE_Proactor::check_reconfiguration() static method,
 	  just like the Reactor!

	* ace/Proactor.h: Added the check_reconfiguration() static method
	  to ACE_Proactor, a la the Reactor!

	* tests/Thread_Pool_Reactor_Resume_Test.cpp,
	* tests/SSL/Thread_Pool_Reactor_SSL_Test.cpp,
	* tests/Thread_Pool_Reactor_Test.cpp: Changed the signature of the
	  reactor_event_hook() method to conform to the minor
 	  modifications outlined below.

	* ace/Reactor.h: Changed the signature of
	  ACE_Reactor::check_reconfiguration() to reflect the following
 	  change.
	
	* ace/Reactor.h: Changed the REACTOR_EVENT_HOOK typedef to take a pointer
	  to the ACE_Reactor.  Thanks to Alex Libman for suggesting this.

	* performance-tests/Synch-Benchmarks/Synch_Lib/Benchmark_Base.cpp: 
	* performance-tests/Synch-Benchmarks/Perf_Test/Performance_Test_Options.cpp: 
	* examples/Threads/tss2.cpp: 
	* examples/Reactor/Misc/test_reactors.cpp: 
	* examples/Reactor/Proactor/post_completions.cpp: 
	* examples/Reactor/Proactor/test_timeout.cpp: 
	* examples/Threads/manual_event.cpp: 
	* examples/Threads/future1.cpp: 
	* examples/Threads/future2.cpp: 
	* examples/Threads/reader_writer.cpp:
	* examples/Threads/task_two.cpp: 
	* tests/Atomic_Op_Test.cpp: 
	* tests/Auto_IncDec_Test.cpp: 
	* tests/Future_Set_Test.cpp: 
	* tests/Future_Test.cpp: 
	* tests/MEM_Stream_Test.cpp:   
	* tests/Message_Queue_Notifications_Test.cpp: 
	* tests/Notify_Performance_Test.cpp: 
	* tests/Reactors_Test.cpp: 
	* tests/Upgradable_RW_Test.cpp: 
	* tests/Reader_Writer_Test.cpp: 